add page header styles

--- a/styles.css
+++ b/styles.css
@@ -28,5 +28,13 @@ form button {
     margin-left: auto;
 }
 
+header {
+    background-color: teal;
+    color: white;
+    text-align: center;
+    padding: 1rem;
+    margin-bottom: 1rem;
+}
+
 
  
