--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,116 @@ body {
     height: 100%;
 }
 
+h1 {
+  color: black;
+  font-weight: bold;  
+}
+
+p {
+    color: black
+}
+
+@media all and (min-width: 600px) {
+.page {
+    display: grid;
+  grid-template-columns: 150px 1fr;
+}
+
+ul {
+    grid-column: 1;
+}
+
+main {
+    grid-column: 2/4;
+}
+
+img {
+    float: left;
+    width: 200px;
+    height: 150px;
+    margin-right: 20px;
+}
+
+li {
+    list-style-type: none;
+    top: 1 rem;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+
+  .para {
+    margin-top: -3px;
+}
+
+a {
+    text-decoration: none;
+    color: hsl(172, 63%, 40%);
+}
+}
+
+@media all and (max-width: 600px) {
+    .page {
+        display: grid;
+      grid-template-rows: 75px 1fr;
+    }
+    
+    ul {
+        grid-row: 1;
+        display: flex;
+    }
+    
+    main {
+        grid-row: 2/4;
+    }
+    
+    img {
+        float: left;
+        width: 200px;
+        height: 150px;
+        margin-right: 20px;
+    }
+
+    .para {
+        margin-top: -3px;
+    }
+    
+    li {
+        list-style-type: none;
+        padding: 17px;
+        margin-right: 60px;
+        margin-left: -50px;
+      }
+
+    .border {
+        border-right: 1px solid lightgrey;
+        height: 5px;
+    }
+    
+    a {
+        text-decoration: none;
+        color: hsl(172, 63%, 40%);
+    }
+
+    a:visited {
+        color: rebeccapurple
+    }
+    }
+
+footer{
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    background: teal;
+    text-align: center;
+}
+
+p.copyright{
+    color: white;
+}
+
+
+
 form {
     border: 1px solid #ccc;
     padding: 1rem;
